[package]
name = "example_perp_spot_arb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
itertools = "0.13"
log = "0.4"
rust_decimal = { version = "1", features = ["maths"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }

bitmex = { path = "../../exchanges/bitmex" }
binance = { path = "../../exchanges/binance" }
mmb_core = { path = "../../core" }
mmb_database = { path = "../../mmb_database" }
mmb_domain = { path = "../../domain" }
mmb_utils = { path = "../../mmb_utils" }
strategies = { path = "../strategies" }
vis_robot_integration = { path = "../../visualization/vis_robot_integration" }

[dev-dependencies]
chrono = "0.4"
test-case = "3.3"
rust_decimal_macros = "1"
