[package]
name = "interactive_brokers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
chrono = "0.4.38"
csv = "1.3.0"
dashmap = "5.5.3"
function_name = "0.3.0"
futures = "0.3.30"
ibtwsapi = "0.1.0"
log = "0.4.21"
mmb_core = { path = "../../core/" }
mmb_domain = { path = "../../domain" }
mmb_utils = { path = "../../mmb_utils" }
rust_decimal = { version = "1.35.0", features = ["maths"] }
rust_decimal_macros = "1.34.2"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"

[dev-dependencies]
