[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-broker = "0.4.3"
actix-cors = "0.7.0"
actix-web = "4"
actix-web-actors = "4.3"
anyhow = "1"
casbin = { version = "2.2.0", default-features = false, features = ["runtime-tokio", "logging", "incremental"] }
chrono = "0.4.38"
env_logger = "0.11"
futures = "0.3.30"
itertools = "0.12.1"
jsonwebtoken = "9.3.0"
log = "0.4"
log4rs = "1.3"
log4rs-logstash = "0.1"
mmb_domain = { path = "../../domain" }
mmb_utils = { path = "../../mmb_utils" }
paperclip = { version = "0.8.2", features = ["actix4", "swagger-ui", "chrono", "rust_decimal"] }
rand = "0.8"
rust_decimal = "1.35"
rust_decimal_macros = "1.34"
serde = { version = "1", features=["derive"]}
serde-aux = "4.5.0"
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "chrono", "macros", "postgres", "runtime-tokio-rustls" ] }
thiserror = "1"
tokio = { version = "1.37.0", features = ["fs", "io-util", "parking_lot"] }
toml = "0.8.12"
